--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.15",
     "@chakra-ui/layout": "^2.1.12",
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.10.5",
@@ -28,6 +29,7 @@
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.4",
     "uuid": "^9.0.0"
   },
