--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
     "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
+    "eslint-config-next": "^13.1.2",
     "framer-motion": "^8.3.0",
-    "next": "13.1.1",
+    "next": "^13.1.2",
     "next-auth": "^4.18.8",
     "planetscale": "^2.1.0",
     "postcss": "^8.4.21",
     "qs": "^6.11.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "typescript": "4.9.4",
     "uuid": "^9.0.0"
