--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
     "eslint": "8.31.0",
-    "eslint-config-next": "^13.1.2",
+    "eslint-config-next": "^12.0.4",
     "framer-motion": "^8.3.0",
     "next": "^13.1.2",
     "next-auth": "^4.18.8",
@@ -34,7 +34,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "typescript": "4.9.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.0",
