--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"@auth/core": "^0.9.0",
 		"@auth/sveltekit": "^0.3.5",
-		"@fontsource/roboto": "^5.0.5"
+		"@fontsource/roboto": "^5.0.5",
+		"next-auth": "^4.22.1"
 	}
 }
